[project]
authors = [{ name = "rafsaf", email = "rafal.safin@rafsaf.pl" }]
dependencies = ["jinja2 (>=3.1.5)", "markdown (>=3.7)", "watchfiles (>=1.0.4)"]
description = "rafsaf.pl portfolio"
license = { text = "MIT" }
name = "rafsaf-pl"
readme = "README.md"
requires-python = ">=3.13"
version = "0.1.0"

[tool.poetry]
package-mode = false

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=2.0.0,<3.0.0"]
